feat: implement github oauth (#26)
